remove unnecessary text on homepage

--- a/template/html/page.html
+++ b/template/html/page.html
@@ -21,7 +21,7 @@
         {table_rows}
     </table>
     <div class="status-bar">
-        <span class="blink">●</span> CLASSIFIED | {file_count} FILES PROCESSED | {current_time}
+        <span class="blink">●</span> {file_count} FILES PROCESSED | {current_time}
     </div>
 </body>
 </html>
