--- a/template/html/reader.html
+++ b/template/html/reader.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorized Text</title>
+    <title>Text Reader</title>
     <style>
-        {{STYLES}}
+        {{css_content}}
     </style>
 </head>
 <body>
-    <div id="content"></div>
-    <div id="navigation">
-        <button id="prev" onclick="changePage(-1)">Previous</button>
-        <button id="next" onclick="changePage(1)">Next</button>
+    <div id="reader">
+        <div id="previous"></div>
+        <div id="current"></div>
+        <div id="next"></div>
     </div>
     <script>
-        const pages = [
-            {{PAGES}}
-        ];
-        {{SCRIPT}}
+        {{js_content}}
     </script>
 </body>
 </html>
-
