--- a/template/html/chat_message.html
+++ b/template/html/chat_message.html
@@ -4,5 +4,7 @@
         <span class="timestamp">{timestamp}</span>
     </div>
     <div class="message-content">{content}</div>
+    {full_content}
+    {expand_link}
     <div class="message-hashtags">{hashtags}</div>
 </div>
